syntax = "proto3";

package ticket;

option go_package = "github.com/aimustaev/service-tickets/internal/generated/proto";

service TicketService {
  // Create a new ticket
  rpc CreateTicket(CreateTicketRequest) returns (TicketResponse) {}
  
  // Get ticket by ID
  rpc GetTicket(GetTicketRequest) returns (TicketResponse) {}
  
  // Update existing ticket
  rpc UpdateTicket(UpdateTicketRequest) returns (TicketResponse) {}
  
  // Delete ticket
  rpc DeleteTicket(DeleteTicketRequest) returns (DeleteTicketResponse) {}
}

// Request to create a new ticket
message CreateTicketRequest {
  string user = 1;
  string agent = 2;
  int64 problem_id = 3;
  int64 vertical_id = 4;
  int64 skill_id = 5;
  int64 user_group_id = 6;
  string channel = 7;
  string status = 8;
}

// Request to get a ticket
message GetTicketRequest {
  string id = 1;
}

// Request to update a ticket
message UpdateTicketRequest {
  string id = 1;
  string user = 2;
  string agent = 3;
  int64 problem_id = 4;
  int64 vertical_id = 5;
  int64 skill_id = 6;
  int64 user_group_id = 7;
  string channel = 8;
  string status = 9;
}

// Request to delete a ticket
message DeleteTicketRequest {
  string id = 1;
}

// Response containing ticket data
message TicketResponse {
  string id = 1;
  string user = 2;
  string agent = 3;
  int64 problem_id = 4;
  int64 vertical_id = 5;
  int64 skill_id = 6;
  int64 user_group_id = 7;
  string channel = 8;
  string status = 9;
  string created_at = 10;
  string updated_at = 11;
}

// Response for delete operation
message DeleteTicketResponse {
  bool success = 1;
}